--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
-# Liligo.github.io
-我的个人站点
+<!DOCTYPE html>
+<html>
+<head>
+    <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
+    <title>Liligo的个人空间</title>
+</head>
+<body>
+  Hello，Welcome！
+</body>
+</html>
